# word-similarity

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yml
src/: main.rs
