[package]
name = "word-similarity"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "*", features = ["json"]}
env_logger = "0.11.8"
log = "0.4.28"
redis = { version = "*", features = ["tokio-comp"] }
serde = {version = "1.0.222", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

